--- a/page/locales/de.json
+++ b/page/locales/de.json
@@ -4,7 +4,7 @@
   "heroLeadParagraph": "Willst Du Google aus Kreuzberg loswerden? <em>Klar!</em><br><span class='success'>Aber was ist mit Deiner Webseite?",
   "heroSubParagraph": "Google Tracker und Algorithmen <em>infiltrieren</em> alle Webseiten, die Du je besucht hast.<br> Also solltest Du diese vielleicht auch loswerden.",
 
-  "formSiteCheckTitle": "Überprüfe, ob Deine Seite von Google benutzt wird",
+  "formSiteCheckTitle": "Überprüfe, ob Deine Seite von Google infiltriert ist",
   "formSiteCheckLabel": "http://",
   "formSiteCheckPlaceholder": "www.meine-seite.de",
   "formSiteCheckButtonText": "Überprüfen",
