Add new translation key

--- a/site/locales/de.json
+++ b/site/locales/de.json
@@ -11,6 +11,7 @@
 
   "sitesListSitenameTitle": "Getestete Seiten",
   "sitesListResultsTitle": "Gefundene Google Spuren",
+  "formSearchSitesPlaceholder": "Suchen…",
   "sitesListResultGoogleFree": "Google-frei",
 
   "footerClaim": "Sag es weiter!",
