--- a/site/locales/en.json
+++ b/site/locales/en.json
@@ -11,6 +11,7 @@
 
   "sitesListSitenameTitle": "Websites tested",
   "sitesListResultsTitle": "Google traces found",
+  "formSearchSitesPlaceholder": "Search…",
   "sitesListResultGoogleFree": "Google free",
 
   "footerClaim": "Spread the word!",
