--- a/site/locales/de.json
+++ b/site/locales/de.json
@@ -11,7 +11,7 @@
 
   "sitesListSitenameTitle": "Getestete Seiten",
   "sitesListResultsTitle": "Gefundene Google Spuren",
-  "formSearchSitesPlaceholder": "Suchen…",
+  "formSearchSitesPlaceholder": "Durchsuchen…",
   "sitesListResultGoogleFree": "Google-frei",
 
   "footerClaim": "Sag es weiter!",
