Minor wording adjustment

--- a/site/locales/en.json
+++ b/site/locales/en.json
@@ -10,7 +10,7 @@
 
   "sitesListSitenameTitle": "Websites tested",
   "sitesListResultsTitle": "Google traces found",
-  "formSearchSitesPlaceholder": "Search…",
+  "formSearchSitesPlaceholder": "Filter…",
   "sitesListResultGoogleFree": "Google free",
 
   "footerClaim": "Spread the word!",
